# sprintctl

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  envrc.example  pyproject.toml  sprintctl_revised_architecture.md
.github/workflows/: ci.yml
docs/: customization.md  migration-guide.md  project-integration.md  work-loop.md
docs/advanced/: claim-discipline.md  coordinator-mode.md
docs/archive/: README.md  session-phase1.md  sprintctl_revised_architecture.md  sprintctl_starter.md
docs/examples/: AGENTS.sprintctl.md  Makefile.sprintctl.mk  agent-prompt-snippets.md  alias-pack.md  bootstrap-prompt.md  bootstrap-workflow.md  editor-and-terminal-integration.md  repo-template.md
docs/guides/: advanced-coordination.md  agent-assisted.md  daily-loop.md  interoperability.md  project-integration.md  resume-work.md  start-here.md  work-loop.md
docs/plans/: README.md  operator-ux-roadmap.md  roadmap-reset.md
docs/plans/ux/: 00-index.md  (+3 more)
docs/reference/: context-and-handoff.md  knowledge-review-flow.md  migration-guide.md
sessions/: phase1.5.md  phase2.md  phase3.md
sprintctl/: calc.py  cli.py  contracts.py  db.py  maintain.py  render.py
tests/: conftest.py  test_backlog_seed.py  test_calc.py  test_claims.py  test_cli_output_format.py  test_contract_models.py  test_core.py  test_deps.py  test_docs_integrity.py  test_event_payload_contracts.py  test_failure_modes.py  test_git_context.py  test_install_workflow_contract.py  test_knowledge.py  test_maintain.py  test_perf.py  test_refs.py  test_release_integrity.py  test_session_resume.py  test_usage_context.py
(+16 files in other folders)
