[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sprintctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["click>=8.1"]

[project.scripts]
sprintctl = "sprintctl.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
